# dao.fun

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  DEPLOY.md  GATES.md  PROGRESS.md  README.md  REDTEAM.md  SPEC.md  VERSIONS.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.gate-evidence/: gate-0a-mainnet.json  gate1-sovereign-mainnet.json  gate1-sovereign-p2-mainnet.json
app/: README.md  next.config.mjs  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
audit/: AUDIT-FINDINGS.md  AUDIT-SPEC.md
docs/: MANIFESTO.md
programs/: Cargo.toml  README.md
programs/proposal-gate/: Cargo.toml  DEPLOY.md
programs/proposal-gate/src/: lib.rs
scripts/: deploy-gate.sh  devnet-validate-creator.ts  dump-mainnet-programs.ts  gate-0a-cleanup.ts  gate-0a-continue.ts  init-wallets.ts  jup-ultra-swap.ts  mainnet-gate1-sovereign-p2.ts  mainnet-gate1-sovereign.ts  serve-frontend-mainnet.ts  serve-mainnet.ts  serve-prod.ts  snapshot-holders.ts  verify-frontend-read.ts
tests/: action-amm.integration.test.ts  action-buyback.integration.test.ts  action-distribute.integration.test.ts  action-setparam.integration.test.ts  audit-f2-no-lock.integration.test.ts  audit-f7-token2022-deposit.integration.test.ts  audit-inv9-directleg.integration.test.ts  audit-orchestrator-token2022.integration.test.ts  cu-budget.integration.test.ts  gate0b-token2022.integration.test.ts  gate0c-fee-sharing.integration.test.ts  gate1-matrix.integration.test.ts  init-wallets.test.ts  launch-plan-selfservice.integration.test.ts  (+7 more)
(+69 files in other folders)
